crates/pack/tests/compile_fail/proposed_fact_struct_literal.stderr
error[E0451]: field `confidence` of struct `ProposedFact` is private
  --> tests/compile_fail/proposed_fact_struct_literal.rs:12:9
   |
 8 |     let _pf = ProposedFact {
   |               ------------ in this type
...
12 |         confidence: UnitInterval::ONE,
   |         ^^^^^^^^^^ private field
